<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="389dp"
        android:layout_height="388dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="404dp"
            android:layout_height="388dp">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="117dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="96dp"
                android:gravity="center"
                android:text="@string/task_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_name"
                android:layout_marginTop="20dp"
                android:text="@string/descriptiion"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/design_default_color_on_secondary"
                android:text="@string/progress"
                android:textSize="24sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="20dp"
                android:text="@string/due_date"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/assignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/due_date"
                android:layout_marginTop="20dp"
                android:text="@string/assignee"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/reportTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/assignee"
                android:layout_marginTop="20dp"
                android:text="@string/reportTo"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reportTo"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>